--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,10 +18,11 @@ include = ["LICENSE", "openapi.json", "logging.json"]
 [tool.poetry.scripts]
 langgraph-verify-graphs = "langgraph_api.graph:verify_graphs"
 
+
 [tool.poetry.dependencies]
 python = ">=3.11.0,<4.0"
 sse-starlette = ">=2.1.0,<2.2.0"
-starlette = ">=0.38.6"
+starlette = ">=0.40.0,<0.47.0"
 watchfiles = ">=0.13"
 langgraph = ">=0.2.56,<0.4.0"
 langgraph-checkpoint = ">=2.0.15,<3.0"
@@ -36,11 +37,13 @@ structlog = "^23.1.0"
 pyjwt = "^2.9.0"
 cryptography = "^43.0.3"
 langgraph-sdk = "^0.1.53"
-psycopg = "^3.1.0"
+psycopg-binary = "^3.1.0"
 psycopg-pool = "^3.1.0"
 croniter = "^1.4.1"
-uuid = "^1.30"
 coredis = "^4.13.2"
+pydantic = ">=2.7.4,<3.0.0"  # ✅ Updated to match `langchain-core`
+fastapi = "^0.115.8"
+
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.6.2"
@@ -54,17 +57,8 @@ pytest-retry = "^1.6.3"
 pytest-httpserver = "^1.1.0"
 fastapi = "^0.115.8"
 
-
-
 [tool.pytest.ini_options]
-# --strict-markers will raise errors on unknown marks.
-# https://docs.pytest.org/en/7.1.x/how-to/mark.html#raising-errors-on-unknown-marks
-#
-# https://docs.pytest.org/en/7.1.x/reference/reference.html
-# --strict-config       any warnings encountered while parsing the `pytest`
-#                       section of the configuration file raise errors.
 addopts = "--strict-markers --strict-config --durations=5 -vv"
-
 
 [build-system]
 requires = ["poetry-core"]
