--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,8 +42,7 @@ psycopg-pool = "^3.1.0"
 croniter = "^1.4.1"
 coredis = "^4.13.2"
 pydantic = ">=2.7.4,<3.0.0"  # ✅ Updated to match `langchain-core`
-fastapi = "^0.115.8"
-
+fastapi=">=0.115.8,<0.116.0"  # ✅ Ensures compatibility
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.6.2"
