--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,6 @@ langgraph-verify-graphs = "langgraph_api.graph:verify_graphs"
 [tool.poetry.dependencies]
 python = ">=3.11.0,<4.0"
 sse-starlette = ">=2.1.0,<2.2.0"
-starlette = ">=0.40.0,<0.47.0"
 watchfiles = ">=0.13"
 langgraph = ">=0.2.56,<0.4.0"
 langgraph-checkpoint = ">=2.0.15,<3.0"
@@ -42,7 +41,9 @@ psycopg-pool = "^3.1.0"
 croniter = "^1.4.1"
 coredis = "^4.13.2"
 pydantic = ">=2.7.4,<3.0.0"  # ✅ Updated to match `langchain-core`
-fastapi=">=0.115.8,<0.116.0"  # ✅ Ensures compatibility
+fastapi=">=0.115.8,<0.116.0"
+starlette=">=0.40.0,<0.47.0"
+
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.6.2"
@@ -54,7 +55,6 @@ langgraph-cli = "^0.1.72"
 pytest-repeat = "^0.9.3"
 pytest-retry = "^1.6.3"
 pytest-httpserver = "^1.1.0"
-fastapi = "^0.115.8"
 
 [tool.pytest.ini_options]
 addopts = "--strict-markers --strict-config --durations=5 -vv"
